Fix layout problem

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -4,10 +4,14 @@
 }
 
 .link {
-  text-decoration: none;
-  color: #2196f3;
   margin-left: 1rem;
   margin-right: 1rem;
+  margin: 0.5rem;
+}
+
+.link > a {
+  text-decoration: none;
+  color: #2196f3;
 }
 
 .title {
