--- a/src/components/ProfileCard.module.css
+++ b/src/components/ProfileCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   justify-content: center;
   align-items: center;
   display: flex;
