--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,10 +1,12 @@
 .main {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .content {
   grid-column-start: 2/4;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
